fixed alignment of the variance and product card

--- a/src/components/Product/ProductDetails.css
+++ b/src/components/Product/ProductDetails.css
@@ -237,7 +237,7 @@
   .product-details-right {
     margin-top: 1em;
     width: 100%;
-    padding: 0em 1em;
+    padding: 0em .2em;
   }
   .product-details-left--img-main>div>div {
     display: none !important;
